[package]
name = "rayon-progress"
version = "1.0.0"
edition = "2021"
license = "MIT"
keywords= ["rayon"]
readme  = "README.md"
repository="https://github.com/vincent-sparks/rayon_progress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.8.1", default-features = false }
